# cpp-systems-explorations

./: .gitignore  README.md
arena-allocator/: .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.sh
arena-allocator/demo/: demo.cpp
arena-allocator/include/: arena.hpp
arena-allocator/scripts/: configure.sh  demo.sh  tests.sh
arena-allocator/src/: arena.cpp  main.cpp
arena-allocator/tests/: death_tests.cpp  rewind_tests.cpp  tests.cpp
arena_allocator/: CMakeLists.txt  DESIGN.md  README.md
arena_allocator/bench/: README.md  bench.cpp  plot.py
arena_allocator/demo/: demo.cpp
arena_allocator/include/: arena.hpp
arena_allocator/src/: arena.cpp
arena_allocator/tests/: allocation_tests.cpp  rewind_tests.cpp  standalone_invalid_alignment.cpp  state_tests.cpp
custom_vector/: CMakeLists.txt  DESIGN.md  README.md
custom_vector/bench/: README.md  bench.cpp  plot.py
custom_vector/demo/: demo.cpp
custom_vector/include/: vector.hpp  vector.inl
custom_vector/tests/: basic_tests.cpp  copy_move_tests.cpp  death_tests.cpp  iterator_tests.cpp  lifetime_tests.cpp  test_utils.hpp  vector_basic_tests.cpp  vector_copy_move_tests.cpp  vector_lifetime_tests.cpp
fiber_job_system/: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  vcpkg.json
fiber_job_system/bench/: README.md  bench.cpp  plot.py
fiber_job_system/demo/: demo.cpp
fiber_job_system/include/: fiber_job_system.hpp
fiber_job_system/src/: fiber_job_system.cpp
fiber_job_system/tests/: basic_tests.cpp  contract_tests.cpp  scheduling_tests.cpp
job_system/: CMakeLists.txt  DESIGN.md  README.md
job_system/bench/: README.md  bench.cpp  plot.py
job_system/demo/: demo.cpp
job_system/include/: job_system.hpp
job_system/src/: job_system.cpp
job_system/tests/: basic_tests.cpp  contract_tests.cpp  dependency_tests.cpp  exception_tests.cpp  wait_tests.cpp
task_graph/: CMakeLists.txt  DESIGN.md  README.md
task_graph/bench/: README.md  bench.cpp  plot.py
task_graph/demo/: demo.cpp
task_graph/include/: task_graph.hpp
task_graph/src/: task_graph.cpp
task_graph/tests/: basic_tests.cpp  contract_tests.cpp  exception_tests.cpp  name_tests.cpp  pipeline_tests.cpp  validation_tests.cpp
thread_pool/: CMakeLists.txt  DESIGN.md  README.md
thread_pool/bench/: README.md  bench.cpp  plot.py
thread_pool/demo/: demo.cpp
thread_pool/include/: thread_pool.hpp
thread_pool/src/: thread_pool.cpp
thread_pool/tests/: basic_tests.cpp  contract_tests.cpp  exception_tests.cpp  shutdown_tests.cpp  stress_tests.cpp
work_stealing_pool/: .gitignore  CMakeLists.txt  DESIGN.md  README.md
work_stealing_pool/bench/: README.md  bench.cpp  plot.py
work_stealing_pool/demo/: demo.cpp
work_stealing_pool/include/: work_stealing_pool.hpp
work_stealing_pool/src/: work_stealing_pool.cpp
work_stealing_pool/tests/: basic_tests.cpp  contract_tests.cpp  stealing_tests.cpp  submission_tests.cpp
